# ConvertAssetIDIntoPNG

./: .gitignore  CMakeLists.txt  ConvertAssetIDIntoPNG.html  LICENSE  README.md
src/: AssetIDDecimalCharToNumberMapper.cpp  AssetIDDecimalCharToNumberMapper.h  CMakeLists.txt  CharToSevenSegmentBitArrayMapper.cpp  CharToSevenSegmentBitArrayMapper.h  ConvertAssetIDIntoPNG.cpp  ConvertAssetIDIntoPNG.h  FourDigitAssetIDLoader.cpp  FourDigitAssetIDLoader.h  IAssetIDCharToNumberMapper.h  IAssetIDLoader.h  ICharToBitArrayMapper.h  IChecksumGenerator.h  IImageFileCreator.h  OneBitPNGImageFileGenerator.cpp  OneBitPNGImageFileGenerator.h  PlainTextFileLoader.cpp  PlainTextFileLoader.h  TwoDigitChecksumGenerator.cpp  TwoDigitChecksumGenerator.h  TwoDigitChecksumGeneratorFromFourDigitAssetID.cpp  TwoDigitChecksumGeneratorFromFourDigitAssetID.h  main.cpp
src/core/: ConfigFileReader.cpp  ConfigFileReader.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  NumberConversion.cpp  NumberConversion.h
tests/: AssetIDDecimalCharToNumberMapperTest.cpp  CMakeLists.txt  CharToSevenSegmentBitArrayMapperTest.cpp  ConfigFileReaderTest.cpp  ConvertAssetIDIntoPNGTest.cpp  FourDigitAssetIDLoaderTest.cpp  NumberConversionTest.cpp  OneBitPNGImageFileGeneratorTest.cpp  PlainTextFileLoaderTest.cpp  TwoDigitChecksumGeneratorFromFourDigitAssetIDTest.cpp  TwoDigitChecksumGeneratorTest.cpp
tests/testData/: SevenSegmentDisplayCharacterToBitArrayMapping.txt  assetIDsTestFile.txt  assetIDsTestFile2.txt
