function(SetupAndAddSingleTestFile TestExecutableName TestSourceFile)
  add_executable(${TestExecutableName} ${TestSourceFile})
  add_test( NAME ${TestExecutableName}
            COMMAND ${TestExecutableName})
  target_link_libraries(${TestExecutableName} ${CMAKE_PROJECT_NAME}_lib gtest gmock GTest::gtest_main)
endfunction()

SetupAndAddSingleTestFile(ConfigFileReaderTest ConfigFileReaderTest.cpp)
SetupAndAddSingleTestFile(AssetIDDecimalCharToNumberMapperTest AssetIDDecimalCharToNumberMapperTest.cpp)
SetupAndAddSingleTestFile(FourDigitAssetIDLoaderTest FourDigitAssetIDLoaderTest.cpp)
SetupAndAddSingleTestFile(TwoDigitChecksumGeneratorFromFourDigitAssetIDTest TwoDigitChecksumGeneratorFromFourDigitAssetIDTest.cpp)
SetupAndAddSingleTestFile(CharToSevenSegmentBitArrayMapperTest CharToSevenSegmentBitArrayMapperTest.cpp)
SetupAndAddSingleTestFile(OneBitPNGImageFileGeneratorTest OneBitPNGImageFileGeneratorTest.cpp)
SetupAndAddSingleTestFile(ConvertAssetIDIntoPNGTest ConvertAssetIDIntoPNGTest.cpp)
INSTALL(DIRECTORY "testData" DESTINATION "${PROJECT_BINARY_DIR}/tests")
